[package]
name = "wupf"
description = "Wii U Plugin Framework"
version = "0.3.4"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/wupf"
publish = false

[features]
derive = ["dep:macros"]

[dependencies]
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.3.0" }
wups = { git = "https://github.com/rust-wiiu/wups", tag = "v0.3.2" }
macros = { path = "./macros", optional = true }
