[package]
name = "wupf"
description = "Wii U Plugin Framework"
version = "0.3.5"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/wupf"
publish = false

[features]
derive = ["dep:macros"]

[dependencies]
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.3.1" }
wups = { git = "https://github.com/rust-wiiu/wups", tag = "v0.3.3" }
macros = { path = "./macros", optional = true }
