[package]
name = "wupf"
description = "Wii U Plugin Framework"
version = "0.3.5"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/wupf"
publish = false

[features]
derive = ["dep:wupf-macros"]

[dependencies]
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.4.0" }
wups = { git = "https://github.com/rust-wiiu/wups", tag = "v0.4.0" }
wupf-macros = { path = "./macros", optional = true }
